Bump maven-javadoc-plugin version